p5js/style.css
html, body {
    margin: 0;
    padding: 0;
    background-color: #000000;
}

canvas {
    display: block;
}

div {
    color: #ffffff;
    float: left;
    height: 90%;
    padding: 0 5px;
}

#column1 {
    padding: 10px 0;
    height: 96vh;
    width: 33.5vh;
    background-color: #000000;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#paragraphs {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

p {
    font-size: large;
}

